--- a/dodododo/index.html
+++ b/dodododo/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<html><head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
-    <meta charset="utf-8" />
-
+    <meta charset="utf-8">
+    <style> 
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+      }
+    </style>
   </head>
-  <body>
+  <body style="background-color:black;">
     <script src="dodododo.js"></script>
-  </body>
-</html>
+</body></html>
