--- a/dorime/index.html
+++ b/dorime/index.html
@@ -26,7 +26,7 @@
   <body class="text-center" style="">
     <h1>You have been Dorime'd</h1>
     <div class="row vh-75">
-      <img class="mx-auto" src="/cheems 2.png">
+      <img class="mx-auto" src="cheems 2.png">
       <audio id="dorime" src="dorime.mp3"></audio>
     </div>
 
