--- a/dorime/index.html
+++ b/dorime/index.html
@@ -21,7 +21,7 @@
         font-size: 20px;
       }
     </style>
-    <title>You have been dorime'd</title>
+    <title>IGN: Video Game News, Reviews, Walkthroughs</title>
   </head>
   <body class="text-center" style="">
     <h1>You have been Dorime'd</h1>
